--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -14,7 +14,7 @@
     --dark-color: #252525;
     --primary-color: #3b141c;
     --secondary-color: #f3961c;
-    --third-color:#324964;
+    --third-color:#5d202c;
     --light-pink-color: #faf4f5;
     --medium-gray-color: #ccc;
     /* Font size */
